--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Required libraries to run automated test properly.
-requests
-robotframework
-robotframework-requests
+requests==2.21.0
+robotframework==3.1.1
+robotframework-requests==0.5.0
 
